--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=ginalig
+spring.datasource.url=jdbc:postgresql://localhost:5432/contosopizza
+server.port=8080
